--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is to test the sauce demo UI application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx cypress run"
   },
   "author": "",
   "license": "ISC",
